Bug 1475033 part 5 - Remove scrollbarbutton min-{width,height} rule. r=jimm
Almost all widgets provide a non-overridable size for scrollbar buttons,
so it makes no sense to specify min size for them.

It is probably a layout bug that min size properties can override the
value returned by GetMinimumWidgetSize even if aIsOverridable is set to
false, but removing this rule is simpler than locating and fixing the
issue in layout code :)

MozReview-Commit-ID: 58pmxQaHlGe

UltraBlame original commit: 76149510c0f0a2f7843bacb06239106f1013bd4e

--- a/toolkit/themes/windows/global/xulscrollbars.css
+++ b/toolkit/themes/windows/global/xulscrollbars.css
@@ -502,37 +502,6 @@ width
 :
 :
 :
-scrollbar
-button
-:
-:
-:
-:
-:
-*
-/
-scrollbarbutton
-{
-min
--
-width
-:
-16px
-;
-min
--
-height
-:
-16px
-;
-}
-/
-*
-:
-:
-:
-:
-:
 square
 at
 the
